Fixes app color overlaping

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -5,7 +5,7 @@ html,
 body,
 #root,
 .App {
-  height: 100%;
+  background-color: #ebf5fb;
 }
 
 body{
